# xian-uwp

./: .coverage  .gitignore  ASYNC_SYNC_VERIFICATION.md  QUICK_REFERENCE.md  README.md  TESTING_SUMMARY.md  VERIFICATION_REPORT.md  WALLET_CONSISTENCY_FINAL.md  WALLET_CONSISTENCY_FIX.md  demo_async_sync.py  pyproject.toml  requirements.txt  test_e2e.py  test_protocol.py  test_server.py  test_simple.py
.openhands/microagents/: repo.md
examples/: demo_client.py  demo_server.py  robust_startup_demo.py  test_helpers.py
examples/dapps/: reflex_dapp.py  rxconfig.py  universal_dapp.py  web_cors_dapp.py
examples/dapps/html-js-dapp/: README.md  app.js  index.html  styles.css  xian-wallet-client.js
examples/dapps/server-hosted-dapp/: README.md  index.html  server-hosted-app.js  styles.css  xian-wallet-client.js
examples/wallets/: cli.py  desktop.py  web.py
protocol/: __init__.py  client.py  models.py  server.py
tests/: README.md  __init__.py  conftest.py  test_async_sync_shutdown.py  test_auth.py  test_client.py  test_cors.py  test_e2e.py  test_e2e_async_sync_demo.py  test_integration_async_sync.py  test_max_sessions_enforcement.py  test_models.py  test_network_config.py  test_protocol.py  test_server.py  test_server_hosted_dapp.py  test_simple.py  test_unlock_rate_limiting.py
xian_uwp/: __init__.py  client.py  models.py  server.py
