[tool.poetry]
name = "xian-uwp"
version = "0.1.0"
description = ""
authors = ["Endogen <endogen@xian.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xian-py = "^0.4.4"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
websockets = "^15.0.1"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
